--- a/css/index-universal.css
+++ b/css/index-universal.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Advent+Pro");
 
 body {
-    max-width: 1530px;
     background-color: #fff1d7;
-    margin: 0px;
+    margin: auto;
     font-family: 'Advent Pro', sans-serif;
     font-size: 25px;
 }
@@ -11,13 +10,8 @@ body {
 .headerphoto {
     display: flex;
     justify-content: center;
-}
-
-blockquote {
-    display: flex;
-    justify-content: center;
-    margin-top: 80px;
-    font-size: 2rem;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 nav {
@@ -27,6 +21,16 @@ nav {
     font-size: 35px;
 }
 
+nav a {
+    text-decoration: none;
+    color: black;
+    padding: 0 5px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
 .banner {
     width: 100%;
     padding-bottom: 20px;
@@ -34,9 +38,9 @@ nav {
 }
 
 footer {
-    display: flex;
+    display: grid;
+    grid-template: 100% / 33% 34% 33%;
     align-items: center;
-    justify-content: space-between;
     background-color: #444444;
     font-size: 16px;
     height: 100px;
@@ -44,12 +48,29 @@ footer {
 }
 
 .linkedfooter {
+    grid-area: 1/1/2/2;
     margin-left: 20px;
+    text-align: left;
+}
+
+.linkedfooter img {
+    width: 30px;
+    height: 30px;
+}
+
+.nickname {
+    grid-area: 1/2/2/3;
+    text-align: center;
+    color: white;
+    align-self: flex-end;
+    font-size: 15px;
 }
 
 .contacts {
+    grid-area: 1/3/2/4;
     margin-right: 20px;
     color: white;
+    text-align: right;
 }
 
 .icon {
