--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+blockquote {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    font-size: 2rem;
+    color: white;
+    background-color: #444444;
+    border-radius: 30px;
+}
+
 div {
     margin-left: 15px;
     margin-right: 15px;
