--- a/css/menu.css
+++ b/css/menu.css
@@ -1,30 +1,127 @@
-.menulist {
-    display: grid;
-    grid-template: 100% / 50% 50%;
-    width: 100%;
+section {
+    display: block;
+    text-align: center;
 }
 
-.menulist ul {
+ul {
     padding: 0;
+    list-style-type: none;
 }
 
+@media (min-width: 914px) {
+    .menulist {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 25%;
+}
+
+@media (min-width: 914px) {
+    .menulist-text {
+        grid-columns: 1/3;
+        grid-rows: 1/4;
+    }
+}
 
 div {
     text-align: center;
-    grid-area: 1/1/2/2;
-    width: 100%
 }
 
+.menulist-photos {
+    display: block;
+}
+
+@media (min-width: 914px) {
+    .bakeexample-buns-in-basket {
+        grid-columns: 3/4;
+        grid-rows: 1/2;
+        height: auto;
+        max-width: 100%;
+        width: auto;
+    }
+}
+    
 .bakeexample-buns-in-basket {
-    margin-top: 15px;
+    height: auto;
+    max-width: 100%;
     width: auto;
-    grid-column: 2;
-    grid-row: 1;
 }
 
-.bakeexample-buns {
-    width: auto;
-    grid-column: 2;
-    grid-row: 1;
+@media (min-width: 914px) {
+    .bakeexample-croissant {
+        grid-columns: 4/5;
+        grid-rows: 1/2;
+        height: auto;
+        max-width: 100%;
+        width: auto;   
+    }
 }
 
+.bakeexample-croissant {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+}
+
+@media (min-width: 914px) {
+    .bakeexample-donut {
+        grid-columns: 3/4;
+        grid-rows: 2/3;
+        height: auto;
+        max-width: 100%;
+        width: auto;   
+    }
+}
+
+.bakeexample-donut {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+}
+
+@media (min-width: 914px) {
+    .bakeexample-macaron {
+        grid-columns: 4/5;
+        grid-rows: 2/3;
+        height: auto;
+        max-width: 100%;
+        width: auto; 
+    }
+}
+
+.bakeexample-macaron {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+}   
+
+@media (min-width: 914px) {
+    .bakeexample-cupcakes {
+        grid-columns: 3/4;
+        grid-rows: 3/4;
+        height: auto;
+        max-width: 100%;
+        width: auto;   
+    }
+}
+
+.bakeexample-cupcakes {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+}
+
+@media (min-width: 914px) {
+    .bakeexample-pie {
+        grid-columns: 4/5;
+        grid-rows: 3/4;
+        height: auto;
+        max-width: 100%;
+        width: auto;   
+    }
+}
+
+.bakeexample-cupcakes {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+}
