--- a/css/order-online.css
+++ b/css/order-online.css
@@ -16,15 +16,18 @@ article {
 
 form {
     text-align: center;
+    flex: 1;
 }
 
 form input {
+    box-sizing:border-box;
     background-color: #444444;
     border-radius: 30px;
     text-align: center;
-    height: 40px;
     width: 100%;
-    margin: 3px;
+    height: 40px;
+    margin-top: 3px;
+    padding: 0px;
     outline: none;
     color: white;
 }
@@ -36,12 +39,14 @@ form input {
 }
 
 .description-of-the-order {
+    box-sizing:border-box;
     border-radius: 30px;
     background-color: #444444;
     outline: none;
     margin-top: 20px;
-    height: 120px;
+    padding: 0px;
     width: 100%;
+    height: 120px;
     color: white;
     text-align: center;
 }
