--- a/css/index-universal.css
+++ b/css/index-universal.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Advent+Pro");
 
 body {
+    max-width: 1000px;
     background-color: #fff1d7;
     margin: auto;
     font-family: 'Advent Pro', sans-serif;
@@ -39,17 +40,18 @@ nav a:hover {
 
 footer {
     display: grid;
-    grid-template: 100% / 33% 34% 33%;
+    grid-template: 100% / 40% 20% 40%;
     align-items: center;
     background-color: #444444;
-    font-size: 16px;
-    height: 100px;
+    font-size: 8px;
+    height: 70px;
     margin-top: 10px;
 }
 
+
 .linkedfooter {
     grid-area: 1/1/2/2;
-    margin-left: 20px;
+    margin-left: 10px;
     text-align: left;
 }
 
@@ -63,12 +65,12 @@ footer {
     text-align: center;
     color: white;
     align-self: flex-end;
-    font-size: 15px;
+    font-size: 8px;
 }
 
 .contacts {
     grid-area: 1/3/2/4;
-    margin-right: 20px;
+    margin-right: 10px;
     color: white;
     text-align: right;
 }
