--- a/css/menu.css
+++ b/css/menu.css
@@ -8,120 +8,77 @@ ul {
     list-style-type: none;
 }
 
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .menulist {
         display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 25% 25% 25% 25%;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 100%;
+        grid-gap:5px;
 }
 
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .menulist-text {
-        grid-columns: 1/3;
-        grid-rows: 1/4;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        box-sizing: content-box;
     }
 }
 
-div {
-    text-align: center;
+
+@media (min-width: 700px) {
+    .menulist-photos {
+        grid-column: 2/4;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: repeat(3,1fr);
+    }
 }
 
 .menulist-photos {
-    display: block;
+    display: grid;
+    grid-template-rows: repeat(6,1fr)
+    grid-template-columns:100%
 }
 
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-buns-in-basket {
-        grid-columns: 3/4;
-        grid-rows: 1/2;
-        height: auto;
-        max-width: 100%;
-        width: auto;
+        grid-column: 1/2;
+        grid-row: 1/2;
     }
 }
-    
-.bakeexample-buns-in-basket {
-    height: auto;
-    max-width: 100%;
-    width: auto;
-}
 
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-croissant {
-        grid-columns: 4/5;
-        grid-rows: 1/2;
-        height: auto;
-        max-width: 100%;
-        width: auto;   
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
 }
 
-.bakeexample-croissant {
-    height: auto;
-    max-width: 100%;
-    width: auto;
-}
-
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-donut {
-        grid-columns: 3/4;
-        grid-rows: 2/3;
-        height: auto;
-        max-width: 100%;
-        width: auto;   
+        grid-column: 1/2;
+        grid-row: 2/3;
     }
 }
 
-.bakeexample-donut {
-    height: auto;
-    max-width: 100%;
-    width: auto;
-}
-
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-macaron {
-        grid-columns: 4/5;
-        grid-rows: 2/3;
-        height: auto;
-        max-width: 100%;
-        width: auto; 
+        grid-column: 2/3;
+        grid-row: 2/3;
     }
 }
 
-.bakeexample-macaron {
-    height: auto;
-    max-width: 100%;
-    width: auto;
-}   
-
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-cupcakes {
-        grid-columns: 3/4;
-        grid-rows: 3/4;
-        height: auto;
-        max-width: 100%;
-        width: auto;   
+        grid-column: 1/2;
+        grid-row: 3/4;
     }
 }
 
-.bakeexample-cupcakes {
-    height: auto;
-    max-width: 100%;
-    width: auto;
-}
-
-@media (min-width: 914px) {
+@media (min-width: 700px) {
     .bakeexample-pie {
-        grid-columns: 4/5;
-        grid-rows: 3/4;
-        height: auto;
-        max-width: 100%;
-        width: auto;   
+        grid-column: 2/3;
+        grid-row: 3/4;
     }
-}
-
-.bakeexample-cupcakes {
-    height: auto;
-    max-width: 100%;
-    width: auto;
 }
