--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+
 blockquote {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 30px;
-    font-size: 1.5rem;
+    font-size: 16px;
     color: white;
-    padding: 3px 3px;
+    padding: 10px 10px;
+    font-family: 'Indie Flower', cursive;
     background-color: #444444;
     border-radius: 30px;
 }
