--- a/css/order-online.css
+++ b/css/order-online.css
@@ -1,3 +1,39 @@
+    #promoButton {
+        background-color: #14A459;
+        border-color: white;
+        width:100px;
+    }
+
+
+@media (min-width:700px) {
+    #promoButton {
+        position: fixed;
+        top: 50%;
+        right: 0px;
+        transform: rotate(270deg);
+    }
+}
+
+#display_discount, #display_product {
+    border-radius: .25rem;
+    border-color: #6c757d;
+    height: 38px;
+    width: 100%;
+}
+
+#product, #discount {
+    height: 38px;
+    display:block;
+    position: relative;
+    margin: 0 auto;
+    background-color: #14A459;
+    border-color: white;
+}
+
+#closeButton {
+    background-color: #444444;
+}
+
 article {
     text-align: center;
 }
@@ -44,7 +80,7 @@ form input {
     background-color: #444444;
     outline: none;
     margin-top: 20px;
-    padding: 0px;
+    padding: 5px;
     width: 100%;
     height: 120px;
     color: white;
@@ -58,7 +94,8 @@ form input {
 }
 
 .button {
-    width: 20%
+    width: 20%;
+    font-size:17px;
 }
 
 @media (min-width: 700px) {
